--- a/administrator/LogAktivitas.html
+++ b/administrator/LogAktivitas.html
@@ -110,7 +110,15 @@
                     <li class="nav-item">
                         <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
                     </li>
-                    <!-- DATA MASTER KEPEGAWAIAN -->
+                    <!-- Pengaturan -->
+          <li class="nav-label">Pengaturan</li>
+          <li class="nav-item">
+            <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
+          </li>
+          <li class="nav-item">
+            <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="bell"></i> <span>API Kepegawaian </span></a>
+          </li>
+          <!-- DATA MASTER KEPEGAWAIAN -->
                     <li class="nav-label mg-t-25">Data Master Kepegawaian</li>
                     <li class="nav-item">
                         <a href="data-pegawai.html" class="nav-link"><i data-feather="user-plus"></i> <span>Pegawai ASN</span></a>
@@ -199,19 +207,19 @@
                     <!-- Monitoring Absensi -->
                     <li class="nav-label mg-t-25">Monitoring Absensi</li>
                     <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="clock"></i> <span>Shift Pegawai</span></a>
-            <ul>
-              <li><a href="ShiftUtama.html">Shift Utama</a></li>
-              <li><a href="ShiftTambahan.html">Shift Tambahan</a></li>
-            </ul>
-          </li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
-            <ul>
-              <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
-              <li><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
-            </ul>
-          </li>
+                        <a href="" class="nav-link"><i data-feather="clock"></i> <span>Shift Pegawai</span></a>
+                        <ul>
+                        <li><a href="ShiftUtama.html">Shift Utama</a></li>
+                        <li><a href="ShiftTambahan.html">Shift Tambahan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item with-sub">
+                        <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
+                        <ul>
+                        <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
+                        <li><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item">
                         <a href="KeluarKantor.html" class="nav-link"><i data-feather="external-link"></i> <span>Keluar Kantor</span></a>
                     </li>
@@ -260,11 +268,10 @@
                         <div>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb breadcrumb-style1 mg-b-10">
-                                    <li class="breadcrumb-item"><a href="#">Data Master Kepegawaian</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Data Nama Jabatan</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Data Log Aktivitas</li>
                                 </ol>
                             </nav>
-                            <h4 class="mg-b-0 tx-spacing--1">Data Nama Jabatan</h4>
+                            <h4 class="mg-b-0 tx-spacing--1">Data Log Aktivitas</h4>
                         </div>
                         <div class="d-none d-md-block">
                             <div class="btn-group" role="group" aria-label="Basic example"></div>
