--- a/administrator/dashboard-harian.html
+++ b/administrator/dashboard-harian.html
@@ -104,6 +104,20 @@
           <li class="nav-item">
             <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
           </li>
+          <li class="nav-item">
+            <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
+          </li>
+          <li class="nav-item">
+            <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
+          </li>
+          <!-- Pengaturan -->
+          <li class="nav-label">Pengaturan</li>
+          <li class="nav-item">
+            <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
+          </li>
+          <li class="nav-item">
+            <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="bell"></i> <span>API Kepegawaian </span></a>
+          </li>
           <!-- DATA MASTER KEPEGAWAIAN -->
           <li class="nav-label mg-t-25">Data Master Kepegawaian</li>
           <li class="nav-item">
