--- a/administrator/TugasTambahan.html
+++ b/administrator/TugasTambahan.html
@@ -109,7 +109,15 @@
                     <li class="nav-item">
                         <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
                     </li>
-                    <!-- DATA MASTER KEPEGAWAIAN -->
+                    <!-- Pengaturan -->
+          <li class="nav-label">Pengaturan</li>
+          <li class="nav-item">
+            <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
+          </li>
+          <li class="nav-item">
+            <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="bell"></i> <span>API Kepegawaian </span></a>
+          </li>
+          <!-- DATA MASTER KEPEGAWAIAN -->
                     <li class="nav-label mg-t-25">Data Master Kepegawaian</li>
                     <li class="nav-item">
                         <a href="data-pegawai.html" class="nav-link"><i data-feather="user-plus"></i> <span>Pegawai ASN</span></a>
@@ -185,19 +193,12 @@
                         </ul>
                     </li>
                     <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="clock"></i> <span>Shift Pegawai</span></a>
-            <ul>
-              <li><a href="ShiftUtama.html">Shift Utama</a></li>
-              <li><a href="ShiftTambahan.html">Shift Tambahan</a></li>
-            </ul>
-          </li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
-            <ul>
-              <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
-              <li><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
-            </ul>
-          </li>
+                        <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
+                        <ul>
+                        <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
+                        <li><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item">
                         <a href="KeluarKantor.html" class="nav-link"><i data-feather="external-link"></i> <span>Keluar Kantor</span></a>
                     </li>
