--- a/administrator/dashboard-bulanan.html
+++ b/administrator/dashboard-bulanan.html
@@ -105,20 +105,17 @@
             <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
           </li>
           <!-- Pengaturan -->
-          <li class="nav-label">Pengaturan</li>
+          <li class="nav-label mg-t-25">Pengaturan</li>
           <li class="nav-item">
             <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
           </li>
           <li class="nav-item">
-            <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="bell"></i> <span>API Kepegawaian </span></a>
+            <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="link-2"></i> <span>API Kepegawaian </span></a>
           </li>
           <!-- DATA MASTER KEPEGAWAIAN -->
           <li class="nav-label mg-t-25">Data Master Kepegawaian</li>
           <li class="nav-item">
             <a href="data-pegawai.html" class="nav-link"><i data-feather="user-plus"></i> <span>Pegawai ASN</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="PegawaiNonAsn.html" class="nav-link"><i data-feather="user-minus"></i> <span>Pegawai Non ASN</span></a>
           </li>
           <li class="nav-item">
             <a href="StrukturOrganisasi.html" class="nav-link"><i data-feather="layout"></i> <span>Struktur Organisasi</span></a>
